crates/cribo/tests/snapshots/bundled_code@forward_reference_import_before_init.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/forward_reference_import_before_init/main.py
---
#!/usr/bin/env python3
# Generated by Cribo - Python Source Bundler
# https://github.com/ophidiarium/cribo

import collections.abc
import functools
import types
mypkg = types.SimpleNamespace()
mypkg.__name__ = 'mypkg'
mypkg_compat = types.SimpleNamespace()
mypkg_compat.__name__ = 'mypkg.compat'
mypkg.compat = mypkg_compat
mypkg_exceptions = types.SimpleNamespace()
mypkg_exceptions.__name__ = 'mypkg.exceptions'
mypkg.exceptions = mypkg_exceptions
class BaseException(Exception):
    """Base exception class"""
    pass
@functools.cache
def __cribo_init___cribo_4089db_mypkg_compat():
    module = types.SimpleNamespace()
    module.__name__ = 'mypkg.compat'
    try:
        from fakejson import JSONDecodeError
        module.JSONDecodeError = JSONDecodeError
    except ImportError:
        from json import JSONDecodeError
        module.JSONDecodeError = JSONDecodeError
    MutableMapping = collections.abc.MutableMapping
    module.MutableMapping = MutableMapping
    return module
mypkg.compat = __cribo_init___cribo_4089db_mypkg_compat()
class CustomJSONError(BaseException, mypkg.compat.JSONDecodeError):
    """Custom JSON error that inherits from compat's JSONDecodeError"""

    def __init__(self, *args):
        mypkg.compat.JSONDecodeError.__init__(self, *args)
        BaseException.__init__(self, str(args[0]) if args else "")

    def __reduce__(self):
        return mypkg.compat.JSONDecodeError.__reduce__(self)
BaseException.__module__ = 'mypkg.exceptions'
CustomJSONError.__module__ = 'mypkg.exceptions'
mypkg.compat = __cribo_init___cribo_4089db_mypkg_compat()
JSONDecodeError = mypkg.compat.JSONDecodeError
mypkg_exceptions.BaseException = BaseException
mypkg_exceptions.CustomJSONError = CustomJSONError
mypkg.CustomJSONError = CustomJSONError
try:
    raise mypkg.CustomJSONError("Test error", "doc", 42)
except mypkg.CustomJSONError as e:
    print(f"Caught error: {e}")
    print("SUCCESS")
