crates/cribo/tests/snapshots/bundled_code@importlib_edge_cases.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/importlib_edge_cases/main.py
---
#!/usr/bin/env python3
# Generated by Cribo - Python Source Bundler
# https://github.com/ophidiarium/cribo

import sys as _sys
import importlib as _importlib
class _CriboModule():

    def __init__(self, m, p):
        self._m, self._p = m, p

    def __getattr__(self, n):
        f = self._p + '.' + n
        try:
            return _CriboModule(_importlib.import_module(f), f)
        except ImportError:
            return getattr(self._m, n)

    def __getattribute__(self, n):
        return object.__getattribute__(self, n) if n in ('_m', '_p', '__getattr__', '__class__', '__dict__', '__dir__', '__module__', '__qualname__') else getattr(object.__getattribute__(self, '_m'), n)
class _Cribo():

    def __getattr__(self, n):
        m = _sys.modules.get(n) or _importlib.import_module(n)
        return _CriboModule(m, n)
_cribo = _Cribo()
my_module = _cribo.types.SimpleNamespace(__name__='my-module', __initializing__=False, __initialized__=False)
def _cribo_init___cribo_332fbf_my_module(self):
    if getattr(self, '__initialized__', False):
        return self
    if getattr(self, '__initializing__', False):
        self.__initializing__ = False
        return self
    value = 42
    self.value = value

    def get_value():
        return value
    self.get_value = get_value
    self.__initialized__ = True
    self.__initializing__ = False
    return self
my_module.__init__ = _cribo_init___cribo_332fbf_my_module
mod = _cribo_init___cribo_332fbf_my_module(my_module)
print(f"Value: {mod.value}")
print(f"Function result: {mod.get_value()}")
assert mod.value == 42
print("SUCCESS: Importlib works with invalid identifiers!")
